# thefutureacademy-server

./: .env  .gitignore  Cargo.toml  cert.pem  key.pem
migrations/: 20260131231833_init.sql  20260202012911_add_instructors_table.sql  20260205014850_add_subject_table.sql  20260207091022_add_topics_table.sql  20260208182208_add_lesson_table.sql  20260211041044_alter_video_id_in_lessons_table.sql  20260212005940_add_enrollment_table.sql  20260213185324_add_student_profile_table.sql  20260213234009_alter_date_of_birth_length_in_student_profile.sql  20260219201445_payment_checkout_table.sql  20260220024623_alter_amount_in_checkouts.sql  20260220025303_add_unique_constraint_to_checkouts.sql  20260223021243_instructor_profile_table.sql  20260302222800_add_admin_table.sql  20260303001217_alter_subject_table.sql  20260303010231_added_teaching_allocations.sql  20260305224140_event_logs.sql  20260320135007_alter_subjects.sql  20260329214724_alter_topic_table.sql  20260405201521_add_unique_constraint_to_enrollments.sql  20260412215621_alter_payments_table.sql  20260412220623_alter_checkouts_table.sql  20260412221056_subscriptions_table.sql  20260412222514_plans_table.sql  20260416110919_add_column_to_plans.sql  20260416183741_remove_subscription_id_from_payments.sql
src/: app_state.rs  main.rs
src/authentication/: mod.rs
src/configuration/: cors.rs  events.rs  mod.rs  routes.rs  server.rs  state.rs
src/contents/: mod.rs
src/domains/: mod.rs
src/enrollments/: enrollments_controller.rs  enrollments_state.rs  mod.rs
src/infrastructure/: mod.rs
src/lesson/: mod.rs  (+2 more)
(+236 files in other folders)
