[package]
name = "thefuture-academy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
log = "0.4.29"
env_logger = "0.11.8"
dotenv = "0.15.0"
serde = { version = "1.0.148", features = ["derive"] }
actix-cors = "0.7.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
async-trait = "0.1.89"
